tests/extensions/mime/errors/limits-include.sieve
require "foreverypart";
require "include";

foreverypart :name "frop" {
	include "include-loop-2";
}
